--- a/app/commercial2.html
+++ b/app/commercial2.html
@@ -587,6 +587,8 @@ require_once 'header.php'
 
 
 
+
+
 	<script type="text/javascript">
 	/* init Call Service */
 		var CallSiteId = '21ffdea9d220a054607fec37466ac564';
@@ -648,7 +650,7 @@ require_once 'header.php'
 		});
 	</script>
 
-	<!-- Yandex.Metrika counter
+	<!--Yandex.Metrika counter-->
 	<script type="text/javascript">
 	    (function (d, w, c) {
 	        (w[c] = w[c] || []).push(function() {
@@ -677,7 +679,7 @@ require_once 'header.php'
 	    })(document, window, "yandex_metrika_callbacks");
 	</script>
 	<noscript><div><img src="https://mc.yandex.ru/watch/36544045" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-	<!-- /Yandex.Metrika counter -->
+	<!--Yandex.Metrika counter-->
 
 	<script type="application/ld+json">
 	{
@@ -693,13 +695,11 @@ require_once 'header.php'
 	}
 	</script>
 
-	<!-- BEGIN JIVOSITE CODE {literal} -->
+	<!--BEGIN JIVOSITE CODE {literal}-->
 	<script type='text/javascript'>
 	    (function(){ var widget_id = 'kslw2VAnnn';var d=document;var w=window;function l(){
 	        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
-	<!-- {/literal} END JIVOSITE CODE -->
-
-
+	<!-- {/literal} END JIVOSITE CODE-->
 
 
 	<link rel="stylesheet" href="css/main.min.css">
