--- a/app/commercial2.html
+++ b/app/commercial2.html
@@ -379,10 +379,10 @@ require_once 'header.php'
 					<ul>
 						<li><a href="#" class="link">Недвижимость</a></li>
 						<li><a href="#" class="link">Транспорт</a></li>
-						<li><a href="#" class="link">Бизнес</a></li>
-						<li><a href="#" class="link">Оборудование</a></li>
-						<li><a href="#" class="link">Ценные бумаги</a></li>
-						<li><a href="#" class="link">Контакты</a></li>
+						<li><a href="business.html" class="link">Бизнес</a></li>
+						<li><a href="equipment.html" class="link">Оборудование</a></li>
+						<li><a href="securites.html" class="link">Ценные бумаги</a></li>
+						<li><a href="about.html" class="link">Контакты</a></li>
 						<li><a href="#" class="link">Блог</a></li>
 					</ul>
 
@@ -586,9 +586,6 @@ require_once 'header.php'
 	<!-- modal end -->
 
 
-
-
-
 	<script type="text/javascript">
 	/* init Call Service */
 		var CallSiteId = '21ffdea9d220a054607fec37466ac564';
@@ -605,12 +602,12 @@ require_once 'header.php'
 		})();
 	</script>
 
+	<script src="js/scripts.min.js"></script>
 
 	<script src="libs/jquery.ba-resize.min.js"></script>
 	<script src="libs/vide/jquery.vide.js"></script>
-<!-- 	<script src="app/app.min.js"></script>
- -->
-	<script src="js/scripts.min.js"></script>
+	<script src="app/app.min.js"></script>
+
 
 <!-- 	<script>
 	    $(".fancybox").fancybox();
