--- a/app/legacy.html
+++ b/app/legacy.html
@@ -346,10 +346,10 @@ require_once 'header.php'
 					<ul>
 						<li><a href="#" class="link">Недвижимость</a></li>
 						<li><a href="#" class="link">Транспорт</a></li>
-						<li><a href="#" class="link">Бизнес</a></li>
-						<li><a href="#" class="link">Оборудование</a></li>
-						<li><a href="#" class="link">Ценные бумаги</a></li>
-						<li><a href="#" class="link">Контакты</a></li>
+						<li><a href="business.html" class="link">Бизнес</a></li>
+						<li><a href="equipment.html" class="link">Оборудование</a></li>
+						<li><a href="securites.html" class="link">Ценные бумаги</a></li>
+						<li><a href="about.html" class="link">Контакты</a></li>
 						<li><a href="#" class="link">Блог</a></li>
 					</ul>
 
@@ -553,7 +553,6 @@ require_once 'header.php'
 	<!-- page-modal end -->
 
 
-
 	<script type="text/javascript">
 	/* init Call Service */
 		var CallSiteId = '21ffdea9d220a054607fec37466ac564';
@@ -570,12 +569,12 @@ require_once 'header.php'
 		})();
 	</script>
 
+	<script src="js/scripts.min.js"></script>
 
 	<script src="libs/jquery.ba-resize.min.js"></script>
 	<script src="libs/vide/jquery.vide.js"></script>
-<!-- 	<script src="app/app.min.js"></script>
- -->
-	<script src="js/scripts.min.js"></script>
+	<script src="app/app.min.js"></script>
+
 
 <!-- 	<script>
 	    $(".fancybox").fancybox();
@@ -665,7 +664,6 @@ require_once 'header.php'
 	    (function(){ var widget_id = 'kslw2VAnnn';var d=document;var w=window;function l(){
 	        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();</script>
 	<!-- {/literal} END JIVOSITE CODE-->
-
 
 
 	<link rel="stylesheet" href="css/main.min.css">
